# zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  TODO.md
assets/levels/kitchen/: Untitled.gltf  kitchen.gltf
assets/models/: Barbarian.gltf
assets/models/kitchen/: kitchen.gltf
assets/models/knight/: Knight.gltf
assets/models/wifu/: root_armature_merchant.gltf
cmake/: ColorDiagnostics.cmake  FetchSubmodules.cmake  TargetAddExtraWarnings.cmake  TargetShaders.cmake
engine/libs/: CMakeLists.txt
engine/src/: CMakeLists.txt  DeletionQueue.cpp  DeletionQueue.h  DrawCommand.h  FreeCameraController.cpp  FreeCameraController.h  Game.cpp  Game.h  MaterialCache.cpp  MaterialCache.h  MeshCache.cpp  MeshCache.h  OSUtil.cpp  OSUtil.h  Renderer.cpp  Renderer.h  VkDescriptors.cpp  VkDescriptors.h  VkInit.cpp  VkInit.h  VkPipelines.cpp  VkPipelines.h  VkTypes.h  VkUtil.cpp  VkUtil.h  main.cpp
engine/src/Graphics/: Camera.cpp  Camera.h  FrustumCulling.cpp  FrustumCulling.h  GPUMesh.h  Material.h  Mesh.h  Scene.h  ShadowMapping.cpp  SkeletalAnimation.h  Skeleton.cpp  Skeleton.h  SkeletonAnimator.cpp  SkeletonAnimator.h  Texture.h
engine/src/Math/: GlobalAxes.h  Sphere.h  Transform.cpp  Transform.h  Util.cpp  Util.h
engine/src/shaders/: blinn_phong.glsl  colored_triangle.frag  colored_triangle.vert  gradient.comp  input_structures.glsl  mesh.frag  mesh.vert  mesh_depth_only.vert  skinning.comp
engine/src/util/: GltfLoader.cpp  GltfLoader.h  ImageLoader.cpp  ImageLoader.h  InputUtil.cpp  InputUtil.h  OSUtil.cpp  OSUtil.h  (+3 more)
tools/: install-vulkan-sdk.sh
